# resource-fs

./: CMakeLists.txt  README.md  config.yaml  main.c
res/: another_resource.txt
scripts/: resource_fs
